[gd_scene load_steps=4 format=3 uid="uid://yosf0sm5shc6"]

[ext_resource type="Script" uid="uid://dqui61wmu4wwi" path="res://StartScene.gd" id="1_0aa8i"]
[ext_resource type="Texture2D" uid="uid://dj00f7repnlyr" path="res://phd_game_logo_2_small.png" id="2_50cbs"]
[ext_resource type="Texture2D" uid="uid://ck2kjget3oqos" path="res://BoltBadge.png" id="3_2j6u4"]

[node name="StartScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0aa8i")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -77.5
offset_right = 250.0
offset_bottom = 77.5
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="GodotButton" type="TextureButton" parent="CenterContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("2_50cbs")
stretch_mode = 3

[node name="GodotLabel" type="Label" parent="CenterContainer/GridContainer"]
layout_mode = 2
text = "Welcome to the PhD Game!"
horizontal_alignment = 1

[node name="BadgeButton" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 678.0
offset_top = 5.0
offset_right = 1178.0
offset_bottom = 365.0
scale = Vector2(0.268451, 0.271788)
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("3_2j6u4")
stretch_mode = 3

[connection signal="pressed" from="CenterContainer/GridContainer/GodotButton" to="." method="_on_godot_button_pressed"]
[connection signal="pressed" from="BadgeButton" to="." method="_on_godot_button_pressed"]
